--- a/css/포트폴리오.css
+++ b/css/포트폴리오.css
@@ -702,7 +702,7 @@ body {
     grid-row: span 1;
 }
 .design-grid .design-item img {
-    /* filter: grayscale(100%); */
+    filter: grayscale(100%);
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
