--- a/css/포트폴리오.css
+++ b/css/포트폴리오.css
@@ -97,6 +97,7 @@ body {
     position: relative; 
     overflow: hidden;
     z-index: 1;
+    /* font-family: "Bebas Neue", serif; */ /* 적용하면 선 짧아짐 */
     font-weight: 400;
 }
 .loading .title .flowing_text {
@@ -242,18 +243,17 @@ body {
     width: calc(100% - 60px);
     margin: 0 auto;
 }
-#section0 .inner .text p{
+#section0 .inner .text p{ 
     font-size: 25px;
     font-weight: 500;
-    display: flex;
-    padding-left: 30px;
+    padding-left: 20px;
     height: 100%;
     color: #333333;
     gap: 20px;
     margin: 10px;
     white-space: nowrap;
     overflow: hidden;
-    animation: typing 3s steps(30) 3s forwards, blink-caret 0.75s step-end infinite;
+    animation: typing 3s steps(30) 3s forwards, blink-caret 0.75s step-end infinite; /* 애니메이션 적용 */
 }
 @keyframes typing {
     from {
@@ -307,37 +307,37 @@ body {
 @keyframes typing {
     0% {
         opacity: 0;
-        transform: translateY(-50px);
+        transform: translateY(-50px); /* 위에서 내려오는 시작 위치 */
     }
     30% {
         opacity: 0.6;
-        transform: translateY(10px);
+        transform: translateY(10px); /* 반동 느낌을 주기 위해 내려옴 */
     }
     60% {
         opacity: 0.8;
-        transform: translateY(-5px);
+        transform: translateY(-5px); /* 위로 약간 튕기는 효과 */
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateY(0); /* 최종 위치 */
     }
 }
 @keyframes bounceDownToUp {
     0% {
         opacity: 0;
-        transform: translateY(-100px);
+        transform: translateY(-100px); /* 위에서 시작 */
     }
     40% {
         opacity: 1;
-        transform: translateY(90px);
+        transform: translateY(90px); /* 살짝 튕기듯 내려오기 */
     }
     60% {
         opacity: 1;
-        transform: translateY(-10px);
+        transform: translateY(-10px); /* 다시 위로 튕기기 */
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateY(0); /* 원래 위치로 돌아오기 */
     }
 }
 #section0 .title img {
@@ -366,6 +366,7 @@ body {
 
 /****************** .section1 ******************/
 #section1 .inner {
+    /* height: 600px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -391,10 +392,11 @@ body {
     font-size: 25px;
     margin-bottom: 30px;
 }
-#section1 .sub_title p {
-    color: #333;
+#section1 .profile_wrap .sub_title p  {
+    color: #999999;
     font-weight: 500;
 }
+
 #section1 .inner .text_wrap .profile {
     margin-bottom: 50px;
 }
@@ -407,18 +409,22 @@ body {
     flex-direction: column;
     gap: 20px;
 }
-#section1 .inner .text_wrap .education {
+.education {
     margin-bottom: 50px;
 }
-#section1 .inner .text_wrap .education .education_wrap {
+.education .education_wrap {
     display: flex;
     gap: 50px;
 }
 
-#section1 .inner .text_wrap .education .education_wrap > div {
+.education .education_wrap > div {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+.education .education_wrap .date p {
+    color: #999999;
+    font-weight: 500;
 }
 #section1 .inner .text_wrap .skill .icon_wrap {
     display: flex;
@@ -434,7 +440,7 @@ body {
 
 /****************** .section2 ******************/
 #section2 {
-    background-image: url(../img/section2.jpg);
+    background-image: url(../img/madison-bracaglia-fcWAwPKpkTU-unsplash.jpg);
     background-repeat: repeat;
     background-size: cover;
     background-position: center center;
@@ -624,11 +630,10 @@ body {
 
 /****************** .section3 ******************/
 #section3 {
-    width: 100vw;
-    height: 100vh;
     padding: 10px 50px;
     margin-top: 80px;
     background-color: #f9f9f9;
+    /* text-align: center; */
 }
 #section3 .inner {
     display: flex;
@@ -659,7 +664,7 @@ body {
     justify-items: center; 
     align-items: center; 
     margin: 0 auto;
-    max-width: 810px;
+    max-width: 900px;
 }
 .design-item {
     position: relative;
@@ -721,7 +726,7 @@ body {
 }
 #section4 .contact{
     width: 80%;
-    height: 750px;
+    height: 720px;
     margin: 0 auto;
     background-color: black;
     border: 2px solid white; 
@@ -732,11 +737,11 @@ body {
     position: relative;
 }
 #section4 .contact h2 {
-    font-size: 290px;
+    font-size: 240px;
     width: 100%;
     font-family: "DM Serif Text", serif;
     font-weight: 200;
-    /* padding-top: 80px; */
+    padding: 40px 0px 0px;
 }
 #section4 .contact .info {
     display: flex;
@@ -773,6 +778,10 @@ body {
     margin-right: 10px;
     transition: transform 0.3s ease, filter 0.3s ease;
 }
+#section4 .contact .info .left .item p:hover img {
+    transform: scale(1.2);
+    filter: brightness(1.2);
+}
 #section4 .contact .info .right {
     display: flex;
     justify-content: flex-end; 
@@ -797,12 +806,13 @@ body {
 }
 #section4 .contact span {
     position: absolute;
-    right: 18%;
+    right: 19%;
     top: 80%;
     text-align: left; 
     font-size: 16px;
     line-height: 1.5;
 }
+
 #section4 .typing {
     font-size: 70px;
     line-height: 1.3;
@@ -819,14 +829,14 @@ body {
     position: absolute;
     color: #fff;
     top: 0;
-    left: -20px;
-    /* width: 0; */
+    left: 0;
+    width: 100%;
     height: 100%;
     overflow: hidden;
     white-space: pre-wrap; 
     border-right: 1px solid #333;
-/*     animation: type 3s steps(40) 1s infinite;
- */}
+    animation: type 3s steps(40) 1s forwards;
+}
 @keyframes type {
     from {
         width: 0;
@@ -836,7 +846,7 @@ body {
         width: 100%;
     }
 }
-#section4 .contact .info .right .item p {
+#section4 .contact .info .right .item p a{
     display: flex;
     align-items: center;
     margin-bottom: 10px;
@@ -847,7 +857,7 @@ body {
     background: transparent;
 }
 
-.contact .right .item p:hover {
+.contact .right .item p a:hover {
     animation: glow 1.5s infinite alternate;
 }
 
